--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
 /*text and body objects*/
 html {
   height: 100vh;
-  background-image: url(../public/images/copenhagen.jpg),
+  background-image: url(./images/copenhagen.jpg),
     linear-gradient(white, black);
   background-repeat: no-repeat;
   background-size: auto;
@@ -82,7 +82,7 @@ html {
 @media screen and (min-width: 800px) {
   html {
     height: 100vh;
-    background-image: url(../public/images/copenhagen.jpg);
+    background-image: url(./images/copenhagen.jpg);
     background-repeat: no-repeat;
     background-size: auto;
     background-attachment: fixed;
