fixed mobile issue. very pleased.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 html {
   box-sizing: border-box;
   background: #ffc600;
-  font-family: 'helvetica neue';
-  font-size: 20px;
+  font-family: 'Amatic SC', cursive, 'helvetica neue';
+  text-shadow: black 1px 0 10px;
+  font-size: 40px;
   font-weight: 200;
 }
 
@@ -16,34 +17,130 @@ body {
   box-sizing: inherit;
 }
 
-.panels {
-  min-height: 100vh;
-  overflow: hidden;
-  display: flex;
-}
-
-.panel {
-  background: #6B0F9C;
-  box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0.1);
-  color: white;
-  text-align: center;
-  align-items: center;
-  /* Safari transitionend event.propertyName === flex */
-  /* Chrome + FF transitionend event.propertyName === flex-grow */
-  transition:
-      font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
-      flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
-      background 0.2s;
-  font-size: 20px;
-  background-size: cover;
-  background-position: center;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
+.panels{
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
+.panel{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  flex: 1;
+  transition: font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11), flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11);
+  background: #6B0F9C;
+  box-shadow: inset 0 0 0 5px rgba(255,255,255,0.1);
+  color: white;
+  font-size: 40px;
+  background-size: cover;
+  background-position: center;
+}
+
+.panel.open{
+  flex: 5;
+  font-size: 40px;
+}
+
+.panel > *{
+  transition: transform 0.5s;
+  width: 100%;
+}
+
+.panel > *:first-child{
+  transform: translateX(-100%);
+}
+
+.panel.open > *:first-child{
+  transform: translateX(0);
+}
+
+.panel > *:last-child{
+  transform: translateX(100%);
+}
+
+.panel.open > *:last-child{
+  transform: translateX(0);
+}
+
+.panel p {
+  text-align: center;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
+  font-size: 1em;
+}
+
+.panel p:nth-child(2){
+  font-size: 2em;
+}
+
+.panel5 p:nth-child(2){
+  font-size: 2em;
+}
+
+.panel1{
+  background-position-y: 20%;
+}
+
+.panel5{
+  background-position-y: 80%;
+}
+
+@media screen and (min-width: 768px){
+  .panel1{
+      background-position-y: 30%;
+  }
+  .panel2{
+      background-position-y: 35%;
+  }
+  .panel5{
+      background-position-y: 70%;
+  }
+}
+
+@media screen and (min-width: 1024px){
+  .panels{
+      flex-direction: row;
+  }
+  .panel{
+      flex-direction: column;
+      height: 100vh;
+  }
+  .panel p{
+      flex: 1;
+  }
+  .panel > *:first-child{
+      transform: translateX(0);
+      transform: translateY(-100%);
+  }
+  .panel.open > *:first-child{
+      transform: translateY(0);
+  }
+  
+  .panel > *:last-child{
+      transform: translateX(0);
+      transform: translateY(100%);
+  }
+  .panel.open > *:last-child{
+      transform: translateY(0);
+  }
+  .panel > * {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: transform 0.5s;
+      width: 100%;
+  }
+  .panel.open > *:nth-child(2){
+      font-size: 70px;
+  }
+  .panel.open >  *{
+      font-size: 40px;
+  }
+}
 .panel1 {
   background-image: url(./images/streets.jpg);
 }
@@ -64,53 +161,10 @@ body {
   background-image: url(./images/lake.JPG);
 }
 
-/* Flex Children */
-.panel>* {
-  margin: 0;
-  width: 100%;
-  transition: transform 0.5s;
-  /* border: 1px solid red; */
-  flex: 1 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.panel>*:first-child {
-  transform: translateY(-100%);
-}
-
-.panel.open-active>*:first-child {
-  transform: translateY(0);
-}
-
-.panel>*:last-child {
-  transform: translateY(100%);
-}
-
-.panel.open-active>*:last-child {
-  transform: translateY(0);
-}
-
-.panel p{
-  text-transform: uppercase;
-  font-family: 'Amatic SC', cursive;
-  text-shadow: 3px 3px rgba(0, 0, 0, 0.72), 3px 3px rgba(0, 0, 0, 0.45);
-  font-size: 2em;
-}
 .panel a {
   text-decoration: none;
   text-transform: uppercase;
   font-family: 'Amatic SC', cursive;
   color: white;
   text-shadow: 3px 3px rgba(0, 0, 0, 0.72), 3px 3px rgba(0, 0, 0, 0.45);
-}
-
-.panel p:nth-child(2) {
-  font-size: 4em;
-}
-
-.panel.open {
-  flex: 5;
-  font-size: 40px;
 }
