--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background: #ffc600;
-  font-family: 'Amatic SC', cursive, 'helvetica neue';
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-shadow: black 1px 0 10px;
   font-size: 40px;
   font-weight: 200;
@@ -164,7 +164,14 @@ body {
 .panel a {
   text-decoration: none;
   text-transform: uppercase;
-  font-family: 'Amatic SC', cursive;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
-  text-shadow: 3px 3px rgba(0, 0, 0, 0.72), 3px 3px rgba(0, 0, 0, 0.45);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1), 2px 2px rgba(0, 0, 0, 1);
+  /* background-color: rgba(0,0,0,0.7); */
+  font-weight: 900;
 }
+
+/* .panel p {
+  /* background-color: rgba(0,0,0,0.5);
+} */
+
