--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ body {
   }
 }
 .panel1 {
-  background-image: url(./images/streets.jpg);
+  background-image: url(./images/rotund.jpg);
 }
 
 .panel2 {
@@ -174,4 +174,3 @@ body {
 /* .panel p {
   /* background-color: rgba(0,0,0,0.5);
 } */
-
